fixing paragraph spacing

--- a/toyota-safety-sense/css/style.css
+++ b/toyota-safety-sense/css/style.css
@@ -126,7 +126,7 @@ body{
 
 .paragraph-1{
     font-size: 1.25rem;
-    margin-top: 5%;
+    margin-top: 15%;
 }
 
 .paragraph-2{
